syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.spotify.demo.search.proto";
option java_outer_classname = "SearchProto";

service SearchService {
  rpc Query(QueryRequest) returns (QueryResponse) {}
}

message QueryRequest {
  int32 page_size = 1;
  string page_token = 2;
  string query = 3;
  repeated EntityType entity_type = 4;  // if empty, search through all entity types
}

message QueryResponse {
  string next_page_token = 1;
  repeated Entity entities = 2;
}

enum EntityType {
  UNKNOWN = 0;
  TRACK = 1;
  ALBUM = 2;
  ARTIST = 3;
}

message Entity {
  EntityType entity_type = 1;
  string id = 2;
  float relevance = 3;
}
